update variable overrides

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,3 +1,8 @@
 /* You can override SASS variables here. */
 
 // @import "plugins/dark";
+$body-min-width: 20rem;
+$menu-width: 10rem;
+$toc-width:12rem;
+$mobile-breakpoint: 60rem;
+$container-max-width: 100rem;
